--- a/DATA471_Assignment4.ipynb
+++ b/DATA471_Assignment4.ipynb
@@ -878,16 +878,16 @@
     }
    ],
    "source": [
-    "geo_code_counts = train_data['geo_code'].value_counts()\n",
+    "#geo_code_counts = train_data['geo_code'].value_counts()\n",
     "\n",
     "# Define a threshold for rare categories (e.g., codes that appear fewer than 2 times)\n",
-    "threshold = 2\n",
+    "#threshold = 2\n",
     "\n",
     "# Create a new column 'geo_code_cleaned' to handle rare categories\n",
-    "train_data['geo_code'] = train_data['geo_code'].apply(lambda x: x if geo_code_counts[x] >= threshold else np.nan)\n",
+    "#train_data['geo_code'] = train_data['geo_code'].apply(lambda x: x if geo_code_counts[x] >= threshold else np.nan)\n",
     "\n",
     "# Display the cleaned data\n",
-    "print(\"Cleaned 'geo_code' column:\")\n",
+    "#print(\"Cleaned 'geo_code' column:\")\n",
     "#print(train_data[['geo_code', 'geo_code_cleaned']])"
    ]
   },
@@ -1010,7 +1010,7 @@
    "outputs": [],
    "source": [
     "# Split the data into training and validation sets\n",
-    "X = train_data.drop(columns=['claim','customer_id','building_painted','building_fenced','garden','settlement','geo_code']).\n",
+    "X = train_data.drop(columns=['claim','customer_id','building_painted','building_fenced','garden','settlement','geo_code'])\n",
     "y = train_data['claim']\n",
     "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=42)"
    ]
