Add 3 metrics function

--- a/DATA471_Assignment4.ipynb
+++ b/DATA471_Assignment4.ipynb
@@ -1166,28 +1166,7 @@
    "cell_type": "markdown",
    "id": "ba09c899",
    "metadata": {},
-   "source": [
-    "- **Logistic Regression:** linear model that predicts the probability of a binary outcome\n",
-    "    - Linearly separable data: Logistic regression performs well when the data is linearly separable\n",
-    "    - The relationship between the features and target is likely linear\n",
-    "\n",
-    "- **Support Vector Machine (SVM):** is a powerful classification algorithm that aims to find the hyperplane that maximizes the margin between two classes.\n",
-    "    - It can handle both linear and non-linear relationships.\n",
-    "    - Feature scaling: is necessary before applying the model.\n",
-    "    - Class imbalance: is necessary to fix class imbalance before apply SMV model.\n",
-    "\n",
-    "- **Random Forest:** is an ensemble learning algorithm that builds multiple decision trees and aggregates their predictions.\n",
-    "    - Random Forest can model complex, non-linear decision boundaries.\n",
-    "    - Feature importance: Random Forest provides a way to measure feature importance.\n",
-    "    - Handling missing data: Random Forest can handle missing data in the input features and can also deal with categorical features directly.\n",
-    "    - Imbalanced data: Random Forest can be sensitive to class imbalances\n",
-    "\n",
-    "- **DecisionTree:** DT algorithm can be effectively used for a binary classification task\n",
-    "    - Decision Trees are non-linear models that can capture complex relationships between features and the target variable.\n",
-    "    - Decision Trees are well-suited for binary-classification problem, as they can iteratively split the data until each node corresponds to a specific class.\n",
-    "    - No Need for Feature Scaling.\n",
-    "    - Handling Missing Values: Decision Trees can handle missing values relatively well by splitting based on available information."
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1212,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 175,
    "id": "f94e3476",
    "metadata": {},
    "outputs": [
@@ -1221,7 +1200,12 @@
      "output_type": "stream",
      "text": [
       "Mean ROC AUC: 0.733\n",
-      "Test ROC AUC: 0.612\n"
+      "\n",
+      "Model Evaluation Metrics:\n",
+      "\tTest ROC AUC: 0.612\n",
+      "\tTest Precision: 0.281\n",
+      "\tTest Recall: 0.420\n",
+      "\tTest F1 Score: 0.337\n"
      ]
     }
    ],
@@ -1231,7 +1215,7 @@
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.linear_model import LogisticRegression, LinearRegression\n",
-    "from sklearn.metrics import roc_auc_score, roc_curve\n",
+    "from sklearn.metrics import roc_auc_score, precision_score, recall_score, f1_score, roc_curve\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "# Initialize and train Logistic Regression\n",
@@ -1253,10 +1237,25 @@
     "#base_pred_proba = baseline_pipline.predict_proba(X_val)[:, 1]\n",
     "base_pred_proba = baseline_pipline.predict(X_val)\n",
     "\n",
+    "# Convert continuous predictions to binary class labels\n",
+    "threshold = 0.5\n",
+    "base_pred_labels = (base_pred_proba >= threshold).astype(int)\n",
+    "\n",
+    "\n",
+    "print('\\nModel Evaluation Metrics:')\n",
     "# Evaluate the model using ROC AUC score\n",
     "baseline_roc_auc = roc_auc_score(y_val, base_pred_proba)\n",
     "baseline_fpr, baseline_tpr, _ = roc_curve(y_val, base_pred_proba)\n",
-    "print('Test ROC AUC: %.3f' % baseline_roc_auc)"
+    "print('\\tTest ROC AUC: %.3f' % baseline_roc_auc)\n",
+    "\n",
+    "# Evaluate the model using Precision, Recall, and F1 Score\n",
+    "precision = precision_score(y_val, base_pred_labels)\n",
+    "recall = recall_score(y_val, base_pred_labels)\n",
+    "f1 = f1_score(y_val, base_pred_labels)\n",
+    "\n",
+    "print('\\tTest Precision: %.3f' % precision)\n",
+    "print('\\tTest Recall: %.3f' % recall)\n",
+    "print('\\tTest F1 Score: %.3f' % f1)"
    ]
   },
   {
